--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -18,7 +18,7 @@
 
 @if (bundle != null)
 {
-	if (modulo == false)
+	if (tipo == Tipo.Bundle)
 	{
 		<div style="margin-bottom: 40px; position: -webkit-sticky; position: sticky; top: 70px; z-index: 3; overflow: hidden;">
 			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px 30px; display: flex; align-items: center; flex-direction: row;">
@@ -44,7 +44,30 @@
 			<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo)" class="boton-pequeño" style="text-align: center; padding: 10px 15px;" target="_blank">
 				@Herramientas.Idiomas.CogerCadena(idioma, "Open", "Bundle")
 			</a>
-		</div>	
+		</div>
+	}
+
+	if (tipo == Tipo.Juego)
+	{
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px 30px; display: flex; align-items: center; flex-direction: row; margin-bottom: 20px;">
+			<div style="display: flex; align-items: center; flex-direction: row;">
+				<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo)" style="width: auto;" target="_blank">
+					<div style="height: 60px; padding-left: 20px; padding-right: 20px;">
+						<img src="@Bundles2.BundlesCargar.DevolverBundle(bundle.Tipo).ImagenTienda" style="height: 100%;" alt="@bundle.NombreBundle" />
+					</div>
+				</a>
+
+				<div style="padding-left: 20px; padding-right: 20px;">
+					<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo)" class="boton-pequeño" style="background-color: transparent; padding: 0px; font-size: 20px; margin-bottom: 10px;" target="_blank">
+						@bundle.NombreBundle
+					</a>
+
+					<div style="display: flex; align-items: center; flex-direction: row; font-size: 14px;">
+						@bundle.FechaEmpieza.Day.ToString()/@bundle.FechaEmpieza.Month.ToString()/@bundle.FechaEmpieza.Year.ToString() • @bundle.FechaTermina.Day.ToString()/@bundle.FechaTermina.Month.ToString()/@bundle.FechaTermina.Year.ToString()
+					</div>
+				</div>
+			</div>
+		</div>
 	}
 
 	if (bundle.Tiers != null)
@@ -60,6 +83,11 @@
 				if (tier.Posicion != bundle.Tiers.Count && bundle.Pick == false)
 				{
 					marginFinal = "margin-bottom: 40px;";
+
+					if (tipo == Tipo.Juego)
+					{
+						marginFinal = "margin-bottom: 20px;";
+					}
 				}
 
 				<div class="perfil" style="padding: 0px; background-color: transparent; @marginFinal">
@@ -121,7 +149,7 @@
 							}
 						}
 
-						<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px; margin-bottom: 20px;">
+						<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
 							@if (bundle.Pick == true)
 							{
 								<div style="display: flex; align-items: center; width: 100%; flex-direction: row; padding-bottom: 10px;">
@@ -507,7 +535,7 @@
 	public int bundleId { get; set; }
 
 	[Parameter]
-	public bool modulo { get; set; }
+	public Tipo tipo { get; set; } = Tipo.Bundle;
 
 	public Bundles2.Bundle bundle = new Bundles2.Bundle();
 
@@ -550,13 +578,21 @@
 
 	protected override async Task OnAfterRenderAsync(bool primerRender)
 	{
-		if (primerRender == true && modulo == false)
+		if (primerRender == true && tipo == Tipo.Bundle)
 		{
 			if (bundle != null)
 			{
 				await JavaScript.InvokeVoidAsync("ChangeUrl", "/bundle/" + bundleId.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(bundle.NombreBundle) + "/");
 			}			
 		}
+	}
+
+	public enum Tipo
+	{
+		Bundle,
+		Bundles,
+		Juego,
+		Noticia
 	}
 
 	private List<Bundles2.BundleTier> OrdenarTiers(List<Bundles2.BundleTier> tiers)
@@ -608,11 +644,18 @@
 
 	private void AbrirJuego(MouseEventArgs e, Juegos.Juego juego, List<string> dlcs, Herramientas.ToolTipDatos datos)
 	{
-		mostrarJuegoDetalles = true;
+		if (tipo == Tipo.Bundles || tipo == Tipo.Juego || tipo == Tipo.Noticia)
+		{
+			NavManager.NavigateTo("/game/" + juego.Id + "/" + Herramientas.EnlaceAdaptador.Nombre(juego.Nombre) + "/", true);
+		}
+		else
+		{
+			mostrarJuegoDetalles = true;
 
-		juegoExpandido = juego;
-		dlcsExpandido = dlcs;
-		datosExpandidos = datos;
+			juegoExpandido = juego;
+			dlcsExpandido = dlcs;
+			datosExpandidos = datos;
+		}
 	}
 
 	private void AbrirJuegoDetalle(MouseEventArgs e)
