--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -90,7 +90,7 @@
 				</a>
 			</div>		
 
-			<Bundle bundleId="@bundleSeleccionado.Id" idioma="@idioma" modulo="true" />
+			<Bundle bundleId="@bundleSeleccionado.Id" idioma="@idioma" tipo="@Bundle.Tipo.Bundles" />
 		}
 	}
 }
