--- a/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
@@ -873,6 +873,8 @@ else
 
                 if (resultadosPublishers.Count > 0)
                 {
+                    encontroAlgo = true;
+
                     if (pestañaSeleccionada == -1)
                     {
                         pestañaSeleccionada = 7;
