--- a/pepeizqs deals web/Pages/bundle.cshtml
+++ b/pepeizqs deals web/Pages/bundle.cshtml
@@ -87,6 +87,5 @@
 
 @(await Html.RenderComponentAsync<Componentes.Secciones.Bundle>(RenderMode.ServerPrerendered, new { 
 	idioma = Model.idioma, 
-	bundleId = Model.bundle.Id, 
-	modulo = false 
+	bundleId = Model.bundle.Id
 }))
