--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -124,7 +124,7 @@
 		if (noticia.BundleId > 0)
 		{
 			<div>
-				<Bundle bundleId="@noticia.BundleId" idioma="@idioma" modulo="true" />
+				<Bundle bundleId="@noticia.BundleId" idioma="@idioma" tipo="Bundle.Tipo.Noticia" />
 			</div>
 		}
 	}
