--- a/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
@@ -1,7 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Identity
 @using Microsoft.JSInterop
+@using pepeizqs_deals_web.Areas.Identity.Data
 
+@inject UserManager<Usuario> UserManager
+@inject SignInManager<Usuario> SignInManager
+@inject IHttpContextAccessor HttpContextAccessor
 @inject IJSRuntime JavaScript
 @inject NavigationManager NavManager
 
@@ -10,6 +15,19 @@
 		history.pushState(null, '', url);
 	}
 </script>
+
+<style>
+	.boton-expandir {
+		transition: transform .2s;
+		filter: brightness(100%);
+		background-color: var(--fondoOscuro);
+	}
+
+		.boton-expandir:hover {
+			transform: scale(1.01);
+			filter: brightness(120%);
+		}
+</style>
 
 @if (cargado == false)
 {
@@ -38,7 +56,7 @@ else
 
 					@if (enseñarCategorias == true)
 					{
-						<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px; display: flex; flex-direction: column; gap: 10px;">
+						<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 10px; display: flex; flex-direction: column; gap: 10px;">
 							@foreach (var categoria in categorias)
 							{
 								string fondo = string.Empty;
@@ -52,15 +70,19 @@ else
 									}
 								}
 
-								<button @onclick="(e => CambiarCategoria(e, categoria.Id))" style="background-color: transparent; color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondo">
-									<div>
-										@{
-											string imagen = "/imagenes/categorias/" + @categoria.Id + ".webp";
-										}
+								<button @onclick="(e => CambiarCategoria(e, categoria.Id))" class="boton-expandir" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondo">
+									<div style="display: flex; align-items: center; gap: 10px;">
+										<div style="max-width: 30px;">
+											@{
+												string imagen = "/imagenes/categorias/" + @categoria.Id + ".webp";
+											}
 
-										<img src="@imagen" />
+											<img src="@imagen" style="width: 100%; height: 100%;"/>
+										</div>
 
-										@categoria.Contenido
+										<div style="width: 100%; font-size: 14px;">
+											@categoria.Contenido
+										</div>
 									</div>
 								</button>
 							}
@@ -72,7 +94,7 @@ else
 			@if (generos.Count > 0)
 			{
 				<div>
-					<button @onclick="(e => AbrirGeneros(e))" style="background-color: transparent; color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; background-color: var(--fondoBotonPequeño);">
+					<button @onclick="(e => AbrirGeneros(e))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; background-color: var(--fondoBotonPequeño);">
 						<div>
 							@Herramientas.Idiomas.CogerCadena(idioma, "String1", "Filter")
 						</div>
@@ -80,7 +102,7 @@ else
 
 					@if (enseñarGeneros == true)
 					{
-						<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px; display: flex; flex-direction: column; gap: 10px;">
+						<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 10px; display: flex; flex-direction: column; gap: 10px;">
 							@foreach (var genero in generos)
 							{
 								string fondo = string.Empty;
@@ -94,8 +116,8 @@ else
 									}
 								}
 
-								<button @onclick="(e => CambiarGenero(e, genero.Id))" style="background-color: transparent; color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondo">
-									<div>
+								<button @onclick="(e => CambiarGenero(e, genero.Id))" class="boton-expandir" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondo">
+									<div style="font-size: 14px;">
 										@genero.Contenido
 									</div>
 								</button>
@@ -107,11 +129,30 @@ else
 		</div>
 
 		<div style="width: 100%;">
-			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 10px; display: flex; flex-direction: column;">
+			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 0px 20px; display: flex; flex-direction: column; gap: 20px;">
 				<Virtualize Context="juego" Items="resultadosGestor" ItemSize="334" OverscanCount="6">
 					<ItemContent>
-						<div style="padding: 10px;">
-							<a href="/game/@juego.Id.ToString()/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" class="boton-pequeño" style="padding: 2px;">
+						@{
+							bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, usuarioJuegosSteam, juego, juego.PrecioMinimosHistoricos[0].DRM);
+							bool usuarioTieneDeseado = false;
+
+							string fondoColor = string.Empty;
+
+							if (usuarioTieneJuego == true)
+							{
+								fondoColor = "background-color: var(--fondoBien);";
+							}
+							else
+							{
+								usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego, juego.PrecioMinimosHistoricos[0].DRM, true);
+
+								if (usuarioTieneDeseado == true)
+								{
+									fondoColor = "background-color: var(--fondoAlerta);";
+								}
+							}
+
+							<a href="/game/@juego.Id.ToString()/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" class="boton-pequeño" style="padding: 2px; @fondoColor">
 								<div style="display: flex; align-items: center;">
 									<div>
 										<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
@@ -128,7 +169,7 @@ else
 									</div>
 								</div>
 							</a>
-						</div>
+						}
 					</ItemContent>
 				</Virtualize>
 			</div>
@@ -145,6 +186,9 @@ else
 
 	[Parameter]
 	public string ids { get; set; }
+
+	private Usuario usuario = new Usuario();
+	private List<string> usuarioJuegosSteam = new List<string>();
 
 	private bool cargado = false;
 
@@ -163,7 +207,15 @@ else
 		{
 			cargado = false;
 
-			await Task.Delay(1);
+			usuario = await Herramientas.UsuarioDatos.Actualizar(HttpContextAccessor.HttpContext.User, usuario, UserManager, idioma);
+
+			if (usuario != null)
+			{
+				if (string.IsNullOrEmpty(usuario.SteamGames) == false)
+				{
+					usuarioJuegosSteam = Herramientas.Listados.Generar(usuario.SteamGames);
+				}
+			}
 
 			CargarCategorias();
 			CargarGeneros();
@@ -172,6 +224,11 @@ else
 
 			foreach (var id in idsLista)
 			{
+				if (id.Contains("c") == true)
+				{
+					enseñarCategorias = true;
+				}
+
 				if (id.Contains("g") == true)
 				{
 					enseñarGeneros = true;
@@ -231,7 +288,45 @@ else
 
 	private async void CambiarCategoria(MouseEventArgs e, string nuevaCategoria)
 	{
-		
+		nuevaCategoria = "c" + nuevaCategoria;
+
+		bool encontrado = false;
+
+		int i = 0;
+		foreach (var id in idsLista)
+		{
+			if (id == nuevaCategoria)
+			{
+				encontrado = true;
+				break;
+			}
+
+			i += 1;
+		}
+
+		if (encontrado == false)
+		{
+			idsLista.Add(nuevaCategoria);
+		}
+		else
+		{
+			idsLista.RemoveAt(i);
+		}
+
+		ids = null;
+
+		foreach (var id in idsLista)
+		{
+			ids = ids + "," + id;
+		}
+
+		if (string.IsNullOrEmpty(ids) == false)
+		{
+			ids = ids.Remove(0, 1);
+		}
+
+		resultadosGestor = BaseDatos.Juegos.Buscar.Filtro(idsLista, 250);
+		await JavaScript.InvokeVoidAsync("ChangeUrl", "/filter/" + ids + "/");
 	}
 
 	#endregion
